<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipeRefreshEstado"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#dee4ee"
        android:orientation="vertical"
        android:padding="@dimen/espacio_norma_1">

        <TextView
            android:id="@+id/titulo_contagio_persona"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etiqueta_contagio_persona"
            android:paddingBottom="@dimen/espacio_norma_2"
            android:paddingTop="@dimen/espacio_norma_1"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/estadoPersona"
            card_view:cardCornerRadius="2dp"
            card_view:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/espacio_norma_1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/img_state_user"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/ico_contact_opt"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/titulo_estado_individuo"
                    android:text="@string/no_contagio_individuo"
                    android:textStyle="bold"
                    android:layout_toRightOf="@+id/img_state_user"
                    android:layout_alignParentTop="true"
                    android:textSize="14sp"
                    android:layout_marginBottom="@dimen/espacio_norma_1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/info_estado_individuo"
                    android:layout_toRightOf="@+id/img_state_user"
                    android:layout_below="@+id/titulo_estado_individuo"
                    android:text="@string/etiqueta_contagio_persona_detallado"/>

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/titulo_contagio_zona"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/espacio_norma_2"
            android:paddingTop="@dimen/espacio_norma_3"
            android:text="@string/etiqueta_contagio_zona"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/estadoZona"
            card_view:cardCornerRadius="2dp"
            card_view:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/espacio_norma_1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/img_state_zone"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/ico_contact_opt"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/titulo_estado_zona"
                    android:text="@string/no_contagio_zona"
                    android:textStyle="bold"
                    android:layout_toRightOf="@+id/img_state_zone"
                    android:layout_alignParentTop="true"
                    android:textSize="14sp"
                    android:layout_marginBottom="@dimen/espacio_norma_1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/info_estado"
                    android:layout_toRightOf="@+id/img_state_zone"
                    android:layout_below="@+id/titulo_estado_zona"
                    android:text="@string/etiqueta_contagio_zona_detallado"/>

            </RelativeLayout>


        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.v4.widget.SwipeRefreshLayout>
